# t-recs

./: .buildinfo  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  Debug & Visualize.ipynb  LICENSE  README.md  README.rst  Structural Virality.ipynb  constants.py  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  tutorials.html
_modules/: index.html  random.html
_sources/: index.rst.txt  install.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst
examples/: MFLFDTesting.ipynb  Tests.ipynb  Untitled.ipynb  advanced-metrics.ipynb  advanced-models.ipynb  basic-example.ipynb  complete-guide-Copy1.ipynb  complete-guide.ipynb  diagnostics-experiments.ipynb  homogenizer_testing.ipynb  predicted_scores.csv  quick-start.ipynb  shown_item_scores.csv  structural-virality.ipynb
rec/: Power law tests.ipynb  __init__.py  bass.py  constants.py  content.py  debug.py  distribution.py  items.py  logging.py  matrix_ops.py  measurement.py  measurements.py  popularity.py  recommender.py  sir.py  social.py  socialgraph.py  stats.py  test.py  user_scores.py  users.py  utils.py
reference/: components.html  metrics.html  models.html  random.html  reference.html
scripts/: lint.sh  lint_and_test.sh  test.sh
src/: Debug & Visualize.ipynb  constants.py  constants_small.py  content.py  debug.py  main.py  measurements.py  popularity.py  recommender.py  user_preferences.py  (+1 more)
(+111 files in other folders)
