[metadata]
name = trecs 
version = 0.0.1b
author = Elena Lucherini
author_email = elucherini@cs.princeton.edu
description = Framework for simulating sociotechnical systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elucherini/t-recs/
project_urls =
    Bug Tracker = https://github.com/elucherini/t-recs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = trecs
python_requires = >=3.7

