[metadata]
name = trecs
version = 0.1.0
author = Eli Lucherini
author_email = elucherini@cs.princeton.edu
description = Framework for simulating sociotechnical systems
long_description = file: README.rst
url = https://github.com/elucherini/t-recs/
project_urls =
    Bug Tracker = https://github.com/elucherini/t-recs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = trecs
python_requires = >=3.7
install_requires =
    numpy>=1.17.0
    scipy>=1.4.1
    networkx>=2.4
    tqdm>=4.46.0
    lenskit>=0.11.1
    pandas==1.0.5
